k8s/manifests/network-system/traefik/static-routes/unifi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: network-system
  annotations:
    traefik.frontend.passHostHeader: "false"
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-system-rfc1918-ips@kubernetescrd
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "router-wireless"
    hajimari.io/appName: "unifi"

spec:
  tls:
    - secretName: unifi-${CLUSTER_NAME}-tls
      hosts:
        - "unifi.${CLUSTER_DOMAIN}"

  rules:
    - host: unifi.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  name: https
